tests/type_errors/length_on_option.nos
# expect_error: no method length
main() = Some(42).length()
